--- a/homework8/homework8/homework8.csproj
+++ b/homework8/homework8/homework8.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{38C90166-F413-4F75-BA64-E7EA123A0087}</ProjectGuid>
+    <ProjectGuid>{1DDE24E0-4105-473B-AE3B-A2FC1005C315}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>homework8</RootNamespace>
     <AssemblyName>homework8</AssemblyName>
@@ -49,43 +49,67 @@
     <Compile Include="AddOrderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddOrderForm.Designer.cs" />
+    <Compile Include="AddOrderForm.Designer.cs">
+      <DependentUpon>AddOrderForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChangeOrderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ChangeOrderForm.Designer.cs" />
+    <Compile Include="ChangeOrderForm.Designer.cs">
+      <DependentUpon>ChangeOrderForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CorrectNumberForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CorrectNumberForm.Designer.cs" />
+    <Compile Include="CorrectNumberForm.Designer.cs">
+      <DependentUpon>CorrectNumberForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CorrectPhoneNumForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CorrectPhoneNumForm.Designer.cs" />
+    <Compile Include="CorrectPhoneNumForm.Designer.cs">
+      <DependentUpon>CorrectPhoneNumForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DelectOrderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DelectOrderForm.Designer.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="DelectOrderForm.Designer.cs">
+      <DependentUpon>DelectOrderForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs" />
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Order.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AddOrderForm.resx" />
-    <EmbeddedResource Include="ChangeOrderForm.resx" />
-    <EmbeddedResource Include="CorrectNumberForm.resx" />
-    <EmbeddedResource Include="CorrectPhoneNumForm.resx" />
-    <EmbeddedResource Include="DelectOrderForm.resx" />
-    <EmbeddedResource Include="MainForm.resx" />
+    <Compile Include="SucceedOrderForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SucceedOrderForm.Designer.cs">
+      <DependentUpon>SucceedOrderForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AddOrderForm.resx">
+      <DependentUpon>AddOrderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChangeOrderForm.resx">
+      <DependentUpon>ChangeOrderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CorrectNumberForm.resx">
+      <DependentUpon>CorrectNumberForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CorrectPhoneNumForm.resx">
+      <DependentUpon>CorrectPhoneNumForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DelectOrderForm.resx">
+      <DependentUpon>DelectOrderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -95,6 +119,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SucceedOrderForm.resx">
+      <DependentUpon>SucceedOrderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="Properties\DataSources\Order.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
