--- a/homework10/homework10/App.config
+++ b/homework10/homework10/App.config
@@ -7,6 +7,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+  <connectionStrings>
+    <add name="OrderDataBase" connectionString="server=localhost;user id=root;password=root;database=orderDB2" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
